DevOps/K8s/k8s/ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: ingress-host
    namespace: default
    annotations:
      kubernetes.io/ingress.class: nginx
      cert-manager.io/cluster-issuer: letsencrypt
      ingress.kubernetes.io/force-ssl-redirect: "true"
    ingressClassName: nginx
    rules:
      - host: rogeriocassares.com.br
        http:
          paths:
            - pathType: Prefix
              backend:
                service:
                  name: goserver-service
                  port:
                    number: 80
              path: /
    # This section is only required if TLS is to be enabled for the Ingress
    tls:
      - hosts:
        - rogeriocassares.com.br
        secretName: letsencrypt-tls
